--- a/ReferenceMapper/ReferenceMapper.csproj
+++ b/ReferenceMapper/ReferenceMapper.csproj
@@ -166,6 +166,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Member.cs" />
+    <Compile Include="Roots.cs" />
     <Compile Include="SolutionScanner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
