--- a/ReferenceMapper/ReferenceMapper.csproj
+++ b/ReferenceMapper/ReferenceMapper.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Roots.cs" />
     <Compile Include="SolutionScanner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
