--- a/TestClassLibrary/TestClassLibrary.csproj
+++ b/TestClassLibrary/TestClassLibrary.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="AClass.cs" />
     <Compile Include="AClassUnitTests.cs" />
+    <Compile Include="ASomething.cs" />
+    <Compile Include="ISomething.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
