--- a/ReferenceMapper.UnitTest/packages.config
+++ b/ReferenceMapper.UnitTest/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.9.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.9.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="2.9.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.9.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Workspaces.MSBuild" version="2.9.0" targetFramework="net461" />
   <package id="NUnit" version="2.7.0" targetFramework="net461" />
